# CircuitPython_AXP192

./: LICENSE  README.rst  README.rst.license  axp192.py  optional_requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
docs/: api.rst  api.rst.license  conf.py  examples.rst  index.rst
examples/: axp192_m5stack_core2_pmic.py  axp192_power_key_press.py  axp192_simpletest.py
